deployments/kubernetes/kafka-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-metrics
  namespace: e-commerce-saga
  labels:
    app: kafka
spec:
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka-metrics
  namespace: e-commerce-saga
subsets:
  - addresses:
      - ip: 10.1.1.153
      - ip: 10.1.1.155
    ports:
      - name: kafka
        port: 9092
